--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+blackhole (1.0.1-1) unstable; urgency=low
+
+  * Bug fix: experimental builders will no longer change meaning of AST
+    tokens (#134).
+
+ -- Evgeny Safronov <division494@gmail.com>  Mon, 18 Jul 2016 16:31:02 +0300
+
 blackhole (1.0.0-1) unstable; urgency=low
 
   * Feature: records can now provide an information whether they were activated.
