--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+blackhole (1.2.0-1) UNRELEASED; urgency=low
+
+  * Added: JSON formatter can now apply custom attributes formatting. This
+    feature can be also configured using "formatting" key in the config.
+  - Added: string formatter now supports optional placeholders with default
+    value (#150).
+  - Fixed: limit min queue factor value to 2. Otherwise an assertion inside
+    MPSC queue is triggered.
+  - Fixed: repair suddenly broken Google Mocking Library link.
+
+ -- Evgeny Safronov <division494@gmail.com>  Mon, 29 Aug 2016 13:06:35 +0300
+
 blackhole (1.1.0-2) unstable; urgency=low
 
   * Fix empty debuginfo package
