--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+blackhole (1.3.0-1) UNRELEASED; urgency=low
+
+  * Added: records are now aware of lightweight process id - LWP (or SPID).
+    On Linux an LWP is a process created to facilitate a user-space thread.
+    Each user-thread has a 1x1 mapping to an LWP. An LWP is associated with its
+    own unique positive number, that we store in the record at the construction
+    time.
+    For other platforms there is always 0 stored in the record instead.
+
+ -- Evgeny Safronov <division494@gmail.com>  Wed, 31 Aug 2016 15:08:12 +0300
+
 blackhole (1.2.1-1) unstable; urgency=low
 
   * Fixed: extend optional placeholders grammar.
