--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-blackhole (1.3.0-1) UNRELEASED; urgency=low
+blackhole (1.3.0-1) unstable; urgency=low
 
   * Added: records are now aware of lightweight process id - LWP (or SPID).
     On Linux an LWP is a process created to facilitate a user-space thread.
