--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+blackhole (1.4.0-1) unstable; urgency=low
+
+  * Stabilized nearly added features.
+
+ -- Evgeny Safronov <division494@gmail.com>  Tue, 07 Feb 2017 17:50:40 +0300
+
 blackhole (1.4.0-0alpha1) unstable; urgency=low
 
   * Added: TSKV (tab-separated key-value) formatter.
