--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+blackhole (1.5.0-1) unstable; urgency=low
+
+  * Added: lambda expressions with capture-list can now be used as formatting 
+    arguments. This allows to log arguments that require heavyweight 
+    transformation before the result can be used.
+
+ -- Evgeny Safronov <division494@gmail.com>  Tue, 14 Feb 2017 17:01:17 +0300
+
 blackhole (1.4.0-1) unstable; urgency=low
 
   * Stabilized nearly added features.
