--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+blackhole (1.7.0-1) unstable; urgency=low
+
+  * Added: add builder for asynchonous sink.
+  * Fixed: suppress warnings in libfmt.
+  * Fixed: fix warnings on modern compilers.
+
+ -- Evgeny Safronov <division494@gmail.com>  Mon, 26 Jun 2017 18:42:56 +0300
+
 blackhole (1.6.0-1) unstable; urgency=low
 
   * Added: allow comments and trailing commas in the JSON config.
