--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+blackhole (1.8.0-1) unstable; urgency=low
+
+  * Fixed: add missing overflow policies.
+  * Changed: using more fast gmtime and localtime replacements.
+
+ -- Evgeny Safronov <division494@gmail.com>  Wed, 23 Aug 2017 21:12:29 +0300
+
 blackhole (1.7.0-1) unstable; urgency=low
 
   * Added: add builder for asynchonous sink.
